Fix layout bugs

--- a/project/JapaneseDictionary.css
+++ b/project/JapaneseDictionary.css
@@ -5,6 +5,7 @@
   font-size: x-large;
   margin: 0 5px;
   margin-left: 0;
+  white-space: nowrap;
 }
 
 .containerHeader {
@@ -12,9 +13,9 @@
   padding-bottom: 5px;
 }
 
-.definitions .containerItem {
+.definitions .containerItem.definition {
   display: grid;
-  grid-template-columns: 15px auto;
+  grid-template-columns: 20px auto;
   grid-gap: 5px;
 }
 
@@ -38,20 +39,22 @@
 }
 
 .badge {
-  font-family: -apple-system;
-  background: lightgray;
+  background: rgb(240, 240, 240);
+  border: 1px solid rgb(220, 220, 220);
   width: min-content;
-  height: min-content;
+  height: 1.2em;
   white-space: nowrap;
   padding: 2px 5px;
   font-size: 0.7em;
   border-radius: 5px;
   margin: 0 2px;
+  margin-bottom: 1px;
 }
 
 .containerItem.badges {
   display: flex;
   margin-left: 5px;
+  flex-wrap: wrap;
 }
 
 .subContainerItem.info {
@@ -62,24 +65,43 @@
 .subContainerItem.info .subArrow {
   color: grey;
   margin-right: 5px;
+  align-self: center;
 }
 
 .subContainerItem.info .info {
   font-size: small;
+  align-self: center;
 }
 
 .alternativeFormsContainer {
   display: grid;
-  grid-template-columns: 47.5% 47.5%;
-  grid-gap: 5%;
+  grid-template-rows: min-content;
+  grid-gap: 10px;
+  background: rgb(240, 240, 240);
+  border-radius: 5px;
+  padding: 10px;
+  margin: 10px 0;
 }
 
 .titleContainer {
   display: flex;
   margin-bottom: 10px;
+  width: 100%;
+  flex-wrap: wrap;
+  grid-column: 1;
 }
 
 .verticalFlex.badges {
   display: flex;
   flex-direction: column-reverse;
+}
+
+.containerItem.alternativeForm {
+  display: flex;
+}
+
+.rightArrow {
+  font-size: small;
+  padding: 0 5px;
+  align-self: center;
 }
